单例模式整理

--- a/src/main/java/com/qinfengsa/pattern/singleton/单例写法的优缺点.md
+++ b/src/main/java/com/qinfengsa/pattern/singleton/单例写法的优缺点.md
@@ -8,5 +8,5 @@
 
 
 3 注册式 将实例对象放到统一的容器中管理（一般为map），通过容器的唯一标识来获取单例
-    优点：统一管理
-    缺点：
+    优点：统一管理，易于扩展，本质上也属于懒汉式，增加新的单例类变得容易
+    缺点：单例容器的职责过重，也会存在线程安全问题
